fix icons and margine bugs on mobile

--- a/styles.css
+++ b/styles.css
@@ -315,12 +315,13 @@ body {
     justify-content: center;
     align-items: center;
     width: 80px;
+    width: 40px;
     height: 30px;
+    height: 2px;
     cursor: pointer;
     transition: all .5s ease-in-out;
     background-color: transparent;
     border: 0;
-    /* border: 3px solid #fff; */
   }
 
   @media (min-width: 45em) {
@@ -330,29 +331,29 @@ body {
   }
 
 .navbar__btn-burger  {
-    left: 20%;
-    width: 50px;
-    height: 6px;
+    left: 18%;
+    width: 30px;
+    height: 2px;
     background: #fff;
     border-radius: 5px;
     transition: all .5s ease-in-out;
   }
   .navbar__btn-burger::before,
   .navbar__btn-burger::after {
-    left: 18%;
+    left: 14%;
     content: '';
     position: absolute;
-    width: 50px;
-    height: 6px;
+    width: 30px;
+    height: 2px;
     background: #fff;
     border-radius: 5px;
     transition: all .5s ease-in-out;
   }
   .navbar__btn-burger::before {
-    transform: translateY(-14px);
+    transform: translateY(-7px);
   }
   .navbar__btn-burger::after {
-    transform: translateY(14px);
+    transform: translateY(7px);
   }
 
   /* ANIMATION */
@@ -392,12 +393,12 @@ body {
         flex-direction: column;
         padding: 3rem 18%;
         border-radius: 5px;
-        top: 10.5%;
-        left: 0;
+        top: 10.2%;
+        left: 1.5%;
         right: 0;
         height: auto;
         z-index: 2;
-        margin-inline: 1.3rem;
+        margin-inline: 1rem;
         box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
         font-size: var(--fs-500);
         font-weight: 500;
@@ -549,10 +550,14 @@ input[type="url"]:focus {
 
 .hero__control {
     display: flex;
-    gap: 3rem;
+    gap: 0.5rem;
     margin-top: 0.6rem;
 }
-
+@media (min-width: 45em) {
+    .hero__control {
+        gap: 3rem;
+    }
+}
 
 .hero__control__settings {
     grid-template-columns: 1fr 1fr;
